# ASESurfaceFinder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
asesurfacefinder/: __init__.py  asesf.py  plot.py  sample_bounds.py  utils.py
examples/: 4MeO_Au_fcc111.xyz  CH3CH2NH_Pt_fcc100.xyz  CO+H2O+NHCH3.xyz
tests/: test_bounds.py  test_main.py
